--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.5.2",
     "prisma": "^6.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
