--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "coresync-backend",
   "version": "1.0.0",
   "description": "",
+  "prisma": {
+    "seed": "ts-node --esm prisma/seed.ts"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
