Add environment variables for email configuration and JWT; update package dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,19 @@
 # PORT
-PORT=
+PORT=your_port
 
 # DATABASE
-DATABASE_URL="mysql://root:password@localhost:3306/db_name"
+DATABASE_URL="mysql://username:password@localhost:3306/db-name"
+
+# JWT
+JWT_SECRET=your_secret
+
+# Node Environment
+NODE_ENV=""
+
+# Nodemailer
+EMAIL_FROM=""
+EMAIL_HOST=""
+EMAIL_PORT=port_number
+EMAIL_SECURE=""
+EMAIL_USER=""
+EMAIL_PASSWORD=""
